Fixed scrollbars for right content in default template

--- a/templates/default/resources/style.css
+++ b/templates/default/resources/style.css
@@ -173,6 +173,10 @@ code a b {
 #right {
 	overflow: auto;
 	margin-left: 275px;
+	height: 100%;
+	position: fixed;
+}
+#rightInner {
 	max-width: 1000px;
 }
 
